--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -196,6 +196,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\GigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -208,6 +209,10 @@
     <Compile Include="Migrations\201609250748054_addGigTable.cs" />
     <Compile Include="Migrations\201609250748054_addGigTable.Designer.cs">
       <DependentUpon>201609250748054_addGigTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609251441167_populateGenreTable.cs" />
+    <Compile Include="Migrations\201609251441167_populateGenreTable.Designer.cs">
+      <DependentUpon>201609251441167_populateGenreTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -278,6 +283,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Gigs\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -296,6 +302,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609250748054_addGigTable.resx">
       <DependentUpon>201609250748054_addGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609251441167_populateGenreTable.resx">
+      <DependentUpon>201609251441167_populateGenreTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
